removed the child props from both the messbo and textarea to use initial value instead with state.  Added new css class to fix an IE bug with the autosizer, known issue but easily fixed with overflow-y being set to auto important.  Removed the loading of all prop types which was causing a bug in firefox to highlight red, functionality is maintained wihtout it.

--- a/src/less/utilities.less
+++ b/src/less/utilities.less
@@ -72,6 +72,10 @@
   overflow: hidden;
 }
 
+.u-overflow-y-auto {
+  overflow-y: auto !important;
+}
+
 
 // -------------------------
 // Text Alignment
@@ -150,5 +154,3 @@
 .u-text-underline {
   text-decoration: underline !important;
 }
-
-
